--- a/blog.html
+++ b/blog.html
@@ -86,7 +86,7 @@
     <section class="blog-list" id="blogList">
       <!-- Cybersecurity -->
       <article class="blog-preview" data-category="cybersecurity">
-        <img src="https://images.unsplash.com/photo-1510511233900-192d6d7a6a48?auto=format&fit=crop&w=400&q=80" alt="Cybersecurity Checklist for Small Businesses">
+          <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="Cybersecurity Lock">
         <div>
           <h2>10-Step Cybersecurity Checklist for Small Businesses</h2>
           <p class="meta">Posted by THQ Cyber Division Team on September 10, 2025 | <span class="category">Cybersecurity</span></p>
