--- a/blog.html
+++ b/blog.html
@@ -89,7 +89,7 @@
           <img src="https://images.unsplash.com/photo-1503676382389-4809596d5290?auto=format&fit=crop&w=400&q=80" alt="Cybersecurity Lock">
         <div>
           <h2>10-Step Cybersecurity Checklist for Small Businesses</h2>
-          <p class="meta">Posted by THQ Cyber Division Team on September 10, 2025 | <span class="category">Cybersecurity</span></p>
+          <p class="meta">Posted by THQ Cyber Division Team on September 26th, 2025 | <span class="category">Cybersecurity</span></p>
           <p class="summary">Is your business protected from the latest threats? Follow our actionable 10-step checklist to secure your email, devices, cloud accounts, and more. Download a printable version for your office!</p>
           <button class="read-more">Read More</button>
           <div class="blog-full-content">
@@ -115,7 +115,7 @@
         <img src="https://images.unsplash.com/photo-1461749280684-dccba630e2f6?auto=format&fit=crop&w=400&q=80" alt="Virtual Assistant Productivity">
         <div>
           <h2>How a Virtual Assistant Can Boost Your Team's Productivity</h2>
-          <p class="meta">Posted by Jane Doe on August 28, 2025 | <span class="category">Productivity</span></p>
+          <p class="meta">Posted by Jane Doe on September 26th, 2025 | <span class="category">Productivity</span></p>
           <p class="summary">Discover how delegating tasks to a skilled virtual assistant helped one of our clients reclaim 10+ hours per week, streamline document workflows, and focus on core business growth.</p>
           <button class="read-more">Read More</button>
           <div class="blog-full-content">
@@ -136,7 +136,7 @@
         <img src="https://images.unsplash.com/photo-1506744038136-46273834b3fb?auto=format&fit=crop&w=400&q=80" alt="Company News">
         <div>
           <h2>THQ Cyber Division Launches New Client Portal</h2>
-          <p class="meta">Posted by THQ Cyber Division Team on July 30, 2025 | <span class="category">News</span></p>
+          <p class="meta">Posted by THQ Cyber Division Team on September 26th, 2025 | <span class="category">News</span></p>
           <p class="summary">We’re excited to announce our new secure client portal—making it easier than ever to request support, manage your information, and access exclusive resources.</p>
           <button class="read-more">Read More</button>
           <div class="blog-full-content">
@@ -157,7 +157,7 @@
         <img src="https://images.unsplash.com/photo-1519389950473-47ba0277781c?auto=format&fit=crop&w=400&q=80" alt="IT Support Solutions">
         <div>
           <h2>5 IT Support Tips Every Remote Worker Should Know</h2>
-          <p class="meta">Posted by Support Specialist on July 20, 2025 | <span class="category">IT Support</span></p>
+          <p class="meta">Posted by Support Specialist on September 26th, 2025 | <span class="category">IT Support</span></p>
           <p class="summary">Remote work is here to stay. Learn five essential IT support practices—from device updates to secure backups—to keep your workflow smooth and your data safe.</p>
           <button class="read-more">Read More</button>
           <div class="blog-full-content">
@@ -176,7 +176,7 @@
         <img src="https://images.unsplash.com/photo-1450101499163-c8848c66ca85?auto=format&fit=crop&w=400&q=80" alt="Business Incorporation Success">
         <div>
           <h2>Case Study: Launching a US LLC with THQ Cyber Division</h2>
-          <p class="meta">Posted by THQ Cyber Division Team on July 15, 2025 | <span class="category">Business Formation</span></p>
+          <p class="meta">Posted by THQ Cyber Division Team on September 26th, 2025 | <span class="category">Business Formation</span></p>
           <p class="summary">Discover how we guide our clients step-by-step. See what sets our business support apart.</p>
           <button class="read-more">Read More</button>
           <div class="blog-full-content">
