--- a/blog.html
+++ b/blog.html
@@ -169,7 +169,7 @@
               <li>Install endpoint security and enable firewalls.</li>
               <li>Contact IT support early if you notice strange behavior or performance issues.</li>
             </ol>
-            <p>Our remote IT support team is available for quick troubleshooting, device setup, and ongoing protection.div>
+            <p>Our remote IT support team is available for quick troubleshooting, device setup, and ongoing protection.</p></div>
       </article>
       <!-- Business Formation -->
       <article class="blog-preview" data-category="business-formation">
