--- a/about.html
+++ b/about.html
@@ -6,189 +6,160 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<!-- Basic Meta Tags -->
-<title>About Us | THQ Cyber Division Unincorporated</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta name="description" content="THQ Cyber Division Unincorporated offers premium virtual assistant services including document writing, proofreading, data entry, and remote IT support.">
-<meta name="keywords" content="virtual assistant, document writing, proofreading, data entry, research, IT support, THQ Cyber Division">
-<meta name="author" content="THQ Cyber Division Unincorporated">
-<meta name="google-site-verification" content="Nx8hQYvwpEVXpzDwblQT1xmLanPVBfI_JmBMlXvbBVQ" />
+  <!-- Basic Meta Tags -->
+  <meta charset="UTF-8">
+  <title>About Us | THQ Cyber Division Unincorporated</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="THQ Cyber Division Unincorporated offers premium virtual assistant services including document writing, proofreading, data entry, and remote IT support.">
+  <meta name="keywords" content="virtual assistant, document writing, proofreading, data entry, research, IT support, THQ Cyber Division">
+  <meta name="author" content="THQ Cyber Division Unincorporated">
 
-<!-- Open Graph Tags -->
-<meta property="og:title" content="About Us | THQ Cyber Division Unincorporated">
-<meta property="og:description" content="Empowering your productivity with reliable virtual assistant and IT support services.">
-<meta property="og:type" content="website">
-<meta property="og:url" content="https://thqcyberdivision.github.io/">
-<meta property="og:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+  <!-- Open Graph & Twitter -->
+  <meta property="og:title" content="About Us | THQ Cyber Division Unincorporated">
+  <meta property="og:description" content="Empowering your productivity with reliable virtual assistant and IT support services.">
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://thqcyberdivision.github.io/">
+  <meta property="og:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="THQ Cyber Division Unincorporated">
+  <meta name="twitter:description" content="Explore expert virtual assistant and remote IT services.">
+  <meta name="twitter:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
 
-<!-- Twitter Card Tags -->
-<meta name="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="THQ Cyber Division Unincorporated">
-<meta name="twitter:description" content="Explore expert virtual assistant and remote IT services.">
-<meta name="twitter:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
-<script type="application/ld+json">
-	{
-	  "@context": "https://schema.org",
-	  "@type": "Organization",
-	  "name": "THQ Cyber Division Unincorporated",
-	  "url": "https://thqcyberdivision.github.io/",
-	  "logo": "https://thqcyberdivision.github.io/logo.png",
-	  "description": "THQ Cyber Division Unincorporated provides virtual assistant and IT support services worldwide, helping individuals and businesses increase productivity with expert support.",
-	  "sameAs": [
-	    "https://github.com/thqcyberdivision"
-	  ],
-	  "contactPoint": {
-	    "@type": "ContactPoint",
-	    "contactType": "Customer Support",
-	    "email": "thqcs@protonmail.com",
-	    "areaServed": "Worldwide",
-	    "availableLanguage": ["English"]
-	  }
-	}
-</script>
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon_32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="favicon_96x96.png">
+  <link rel="icon" type="image/png" sizes="192x192" href="favicon_192x192.png">
+  <meta name="theme-color" content="#007bff">
 
-<link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
-<meta name="theme-color" content="#007bff">
-    <div id="google_translate_element"></div>
-
-
-	<script type="text/javascript" src="//translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-
-
-	<link rel="icon" type="image/png" sizes="16x16" href="https://thqcyberdivision.github.io/favicon_16x16.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="https://thqcyberdivision.github.io/favicon_32x32.png">
-	<link rel="icon" type="image/png" sizes="96x96" href="https://thqcyberdivision.github.io/favicon_96x96.png">
-	<link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_192x192.png">
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f5f5f5;
-            color: #000;
-            background-image: url('website_cover.jpg');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
-        }
-        header {
-            background-color: #000;
-            color: #fff;
-            text-align: center;
-            padding: 15px 0;
-        }
-        header img {
-            width: 100px;
-            display: block;
-            margin: 0 auto;
-        }
-        header h1 {
-            font-size: 1.5em;
-            margin: 10px 0 0;
-        }
-        nav {
-            background-color: #000;
-            padding: 10px;
-            display: flex;
-            justify-content: center;
-        }
-        nav a {
-            color: #fff;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: all 0.3s ease-in-out;
-        }
-
-        nav a:hover {
-	    background-color: rgb(65,105,225);
-            color: #000;
-            text-decoration: None;
-        }
-        main {
-            padding: 20px 15px;
-            text-align: center;
-        }
-        main h1 {
-            font-size: 2em;
-            margin-bottom: 20px;
-        }
-        main p {
-            font-size: 1.2em;
-            line-height: 1.6;
-            max-width: 800px;
-            margin: 0 auto;
-        }
-        footer {
-            background-color: #000;
-            color: #fff;
-            text-align: center;
-            padding: 15px 10px;
-        }
-        footer img {
-            width: 30px;
-            margin: 0 5px;
-            cursor: pointer;
-        }
-        footer img:hover {
-            opacity: 0.7;
-        }
-	
-	.overlay-tile {
-	    background-color: rgba(255, 255, 255, 0.8); /* white with 80% opacity */
-	    padding: 20px;
-	    border-radius: 10px;
-	    display: inline-block;
-	    margin-top: 20px;
-	    max-width: 800px;
-	    margin-left: auto;
-	    margin-right: auto;
-	}
-    </style>
+  <style>
+    body {
+      font-family: Arial, sans-serif;
+      margin: 0;
+      background: #f5f5f5 url('website_cover.jpg') center/cover no-repeat;
+      color: #000;
+    }
+    header, footer {
+      background: #000;
+      color: #fff;
+      text-align: center;
+      padding: 15px 0;
+    }
+    header img {
+      width: 100px;
+      display: block;
+      margin: 0 auto 10px;
+    }
+    header h1 {
+      font-size: 1.5em;
+      margin: 10px 0 0;
+    }
+    nav {
+      background: #222;
+      padding: 10px 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 8px 15px;
+      border-radius: 5px;
+      transition: background 0.2s;
+    }
+    nav a.active, nav a:hover {
+      background: #4169e1;
+      color: #fff;
+    }
+    main {
+      padding: 30px 10px;
+      display: flex;
+      justify-content: center;
+    }
+    .overlay-tile {
+      background: rgba(255,255,255,0.92);
+      padding: 28px 28px 22px 28px;
+      border-radius: 10px;
+      max-width: 800px;
+      margin: 0 auto;
+      box-shadow: 0 2px 12px rgba(0,0,0,0.06);
+      text-align: left;
+    }
+    .overlay-tile h1, .overlay-tile h2, .overlay-tile h3 {
+      color: #222;
+      text-align: center;
+    }
+    .overlay-tile ul {
+      max-width: 700px;
+      margin: 0 auto 20px auto;
+      padding-left: 18px;
+    }
+    .overlay-tile p, .overlay-tile ul, .overlay-tile li {
+      font-size: 1.1em;
+      line-height: 1.6;
+    }
+    @media (max-width: 700px) {
+      .overlay-tile { padding: 14px 6vw; }
+      header img { width: 70px; }
+    }
+    footer nav a {
+      color: #fff;
+      text-decoration: underline;
+      margin: 0 5px;
+    }
+  </style>
 </head>
 <body>
-    <header>
-	    
-	     <a href="https://thqcyberdivision.github.io/index.html">
-        <img src="https://thqcyberdivision.github.io/logo.png" alt="THQ Logo">
-	     </a>
-        <h1>About Us - THQ Cyber Division</h1>
-    </header>
+  <header>
+    <a href="index.html">
+      <img src="logo.png" alt="THQ Logo">
+    </a>
+    <h1>About Us - THQ Cyber Division</h1>
+  </header>
+  <nav>
+    <a href="index.html">Home</a>
+    <a href="about.html" class="active">About Us</a>
+    <a href="services.html">Services</a>
+    <a href="blog.html">Blog</a>
+    <a href="contact.html">Contact</a>
+  </nav>
+  <main>
+    <div class="overlay-tile">
+      <h1>Our Mission and Vision</h1>
+      <p>
+        At <b>THQ Cyber Division Unincorporated</b>, we're driven by a passion for delivering high-quality virtual assistant and IT support services.
+        Our mission is to empower businesses and individuals by providing reliable, secure, and efficient support that helps you focus on what matters most.
+      </p>
+      <h2>Why Choose Us?</h2>
+      <ul>
+        <li><b>Personalized Support:</b> Our team is dedicated to understanding and meeting your unique needs.</li>
+        <li><b>Expertise:</b> We offer years of experience in document services, research, data entry, and remote IT support.</li>
+        <li><b>Flexibility:</b> Work with us on your schedule—our services are designed to fit you.</li>
+        <li><b>Security:</b> Your data privacy and security are our top priorities.</li>
+      </ul>
+      <h2>Who We Are</h2>
+      <p>
+        THQ Cyber Division Unincorporated is a leading provider of digital services for clients worldwide. Our team combines deep technical knowledge with a commitment to client satisfaction. Whether you need administrative help, document processing, or technical troubleshooting, we are here for you.
+      </p>
+      <h3>Our Vision</h3>
+      <p>
+        To be a globally recognized IT solutions leader, renowned for our commitment to innovation, quality, and exceptional client service.
+      </p>
+      <h3>Contact Us</h3>
+      <p>
+        Email: <a href="mailto:thqcs@protonmail.com">thqcs@protonmail.com</a><br>
+        Visit our <a href="contact.html">Contact page</a> for more options.
+      </p>
+    </div>
+  </main>
+  <footer>
+    <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
     <nav>
-        <a href="https://thqcyberdivision.github.io/index.html">Home</a>
-        <a href="https://thqcyberdivision.github.io/about.html" class="active">About Us</a>
-        <a href="https://thqcyberdivision.github.io/services.html">Services</a>
-<a href="https://thqcyberdivision.github.io/blog.html">Blog</a>
-<a href="contact.html">Contact</a>
+      <a href="terms.html">Terms of Use</a> |
+      <a href="privacy.html">Privacy Policy</a> |
+      <a href="mailto:thqcs@protonmail.com">Email Us</a>
     </nav>
-    <main>
-	<div class="overlay-tile">
-        <h1>Our Mission and Vision</h1>
-        <p>At THQ Cyber Division Unincorporated, we're driven by a passion for delivering high-quality virtual assistant services. Our mission is to empower businesses and individuals by providing personalized support that helps them achieve their goals.
-</p>
-        <h2>Why Choose Us?</h2>
-        <p><b>Personalized Support</b>: Our team of virtual assistants is dedicated to providing personalized support tailored to your specific needs.
-<b>Expertise</b>: We have extensive experience in providing virtual assistant services.
-<b>Flexibility</b>: Our services are designed to be flexible, allowing you to work with us in a way that suits your schedule and needs.</p>
-		
-        <h2>Who We Are</h2>
-        <p>THQ Cyber Division Unincorporated is a leading provider of IT services, delivering innovative, secure, and efficient solutions for businesses of all sizes. Our mission is built on integrity, excellence, and innovation to empower organizations to thrive in today's digital landscape.</p>
-       
-        <h3>Our Vision</h3>
-        <p>To be a globally recognized IT solutions leader, renowned for our commitment to innovation, quality, and exceptional client service.</p>
-	</div>
-    </main>
-    <footer>
-        <p>&copy; 2024 - 2025 THQ Cyber Division Unincorporated. All rights reserved.</p>
-        <nav>
-	    <a href="terms.html">Terms of Use</a> |
-	    <a href="privacy.html">Privacy Policy</a> |
-	    <a href="mailto:thqcs@protonmail.com">Email Us</a>
-	</nav>
-    </footer>
-<script src="main.js"></script>
+  </footer>
 </body>
 </html>
