--- a/blog.html
+++ b/blog.html
@@ -10,9 +10,26 @@
     body { font-family: Arial, sans-serif; margin: 0; background: #f5f5f5; color: #000; }
     header, footer { background: #000; color: #fff; text-align: center; padding: 15px 0; }
     header img { height: 50px; }
-    nav { background: #222; display: flex; justify-content: center; gap: 20px; padding: 10px 0; flex-wrap: wrap; }
-    nav a { color: #fff; text-decoration: none; font-weight: bold; padding: 8px 15px; border-radius: 5px; }
-    nav a.active, nav a:hover { background: #4169e1; color: #fff; }
+        nav {
+      background: #222;
+      padding: 10px 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 8px 15px;
+      border-radius: 5px;
+      transition: background 0.2s;
+    }
+    nav a.active, nav a:hover {
+      background: #4169e1;
+      color: #fff;
+    }
     main { display: flex; flex-wrap: wrap; max-width: 1200px; margin: 30px auto; gap: 30px; padding: 0 10px; }
     .blog-main { flex: 2 1 600px; }
     .blog-sidebar { flex: 1 1 300px; background: #fff; border-radius: 10px; box-shadow: 0 0 12px rgba(0,0,0,0.06); padding: 20px; margin-bottom: 30px; }
