--- a/index.html
+++ b/index.html
@@ -100,28 +100,26 @@
             font-size: 1.5em;
             margin: 10px 0 0;
         }
-        nav {
-            background-color: #000;
-            padding: 10px;
-            display: flex;
-            justify-content: center;
-            flex-wrap: wrap;
-        }
-        nav a {
-            color: #fff;
-            margin: 0 10px;
-            text-decoration: none;
-            font-weight: bold;
-            padding: 12px 20px;
-            border-radius: 5px;
-            transition: all 0.3s ease-in-out;
-            font-size: 1em;
-        }
-        nav a:hover {
-            background-color: rgb(65,105,225);
-            color: #000;
-            text-decoration: none;
-        }
+            nav {
+      background: #222;
+      padding: 10px 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 8px 15px;
+      border-radius: 5px;
+      transition: background 0.2s;
+    }
+    nav a.active, nav a:hover {
+      background: #4169e1;
+      color: #fff;
+    }
         main {
             padding: 20px 10px;
             text-align: center;
