--- a/services.html
+++ b/services.html
@@ -91,38 +91,25 @@
       margin: 10px 0 0;
     }
 
-    nav {
-      background-color: #000;
-      padding: 10px;
+        nav {
+      background: #222;
+      padding: 10px 0;
       display: flex;
       justify-content: center;
+      gap: 20px;
       flex-wrap: wrap;
     }
-    .snipcart-checkout {
-      position: absolute;
-      right: 20px;
-      top: 20px;
-      color: #fff;
-      text-decoration: none;
-      background: #4169e1;
-      padding: 8px 12px;
-      border-radius: 6px;
-      font-size: 0.9em;
-    }
-
     nav a {
       color: #fff;
-      margin: 0 15px;
       text-decoration: none;
       font-weight: bold;
-      padding: 10px 20px;
+      padding: 8px 15px;
       border-radius: 5px;
-      transition: all 0.3s ease-in-out;
+      transition: background 0.2s;
     }
-
-    nav a:hover {
-      background-color: royalblue;
-      color: #000;
+    nav a.active, nav a:hover {
+      background: #4169e1;
+      color: #fff;
     }
 
     main {
