--- a/bookings.html
+++ b/bookings.html
@@ -117,46 +117,46 @@
             background-color: #f5f5f5;
             color: #000;
         }
-        header {
-            background-color: #000;
-            color: #fff;
-            text-align: center;
-            padding: 15px 0;
-        }
-        header img {
-            width: 100px;
-            display: block;
-            margin: 0 auto;
-        }
-        header h1 {
-            font-size: 1.5em;
-            margin: 10px 0 0;
-        }
-        nav {
-            background-color: #000;
-            padding: 10px;
-            display: flex;
-            justify-content: center;
-        }
-        nav a {
-            color: #fff;
-            margin: 0 15px;
-            text-decoration: none;
-            font-weight: bold;
-            padding: 10px 20px;
-            border-radius: 5px;
-            transition: all 0.3s ease-in-out;
-        }
-
-        nav a:hover {
-	    background-color: rgb(65,105,225);
-            color: #000;
-            text-decoration: None;
-        }
-        main {
-            padding: 20px 15px;
-            text-align: center;
-        }
+            header, footer {
+      background: #000;
+      color: #fff;
+      text-align: center;
+      padding: 15px 0;
+    }
+    header img {
+      width: 100px;
+      display: block;
+      margin: 0 auto 10px;
+    }
+    header h1 {
+      font-size: 1.5em;
+      margin: 10px 0 0;
+    }
+    nav {
+      background: #222;
+      padding: 10px 0;
+      display: flex;
+      justify-content: center;
+      gap: 20px;
+      flex-wrap: wrap;
+    }
+    nav a {
+      color: #fff;
+      text-decoration: none;
+      font-weight: bold;
+      padding: 8px 15px;
+      border-radius: 5px;
+      transition: background 0.2s;
+    }
+    nav a.active, nav a:hover {
+      background: #4169e1;
+      color: #fff;
+    }
+    main {
+      padding: 30px 10px;
+      display: flex;
+      justify-content: center;
+    }
         main h1 {
             font-size: 2em;
             margin-bottom: 20px;
