--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 <meta name="twitter:description" content="Explore expert virtual assistant and remote IT services.">
 <meta name="twitter:image" content="https://ipfs.io/ipfs/QmNeSC4iXfe5NiHhuFJ8jqLnEFxFTXRziQjEbwrbXJz5UC">
 
-<link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
+<link rel="manifest" href="/manifest.json">
 <meta name="theme-color" content="#007bff">
     
 <script type="application/ld+json">
