--- a/index.html
+++ b/index.html
@@ -53,7 +53,18 @@
 	}
 </script>
 
-
+<script>
+if ('serviceWorker' in navigator) {
+  window.addEventListener('load', function() {
+    navigator.serviceWorker.register('/service-worker.js')
+      .then(function(registration) {
+        console.log('Service Worker registered with scope:', registration.scope);
+      }, function(err) {
+        console.log('Service Worker registration failed:', err);
+      });
+  });
+}
+</script>
 	
 
     </script>
