--- a/services.html
+++ b/services.html
@@ -11,7 +11,7 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
 
-  <meta name="description" content="THQ Cyber Division provides professional Cyber Threat Intelligence, incident response advisory, secure VPS rentals and bespoke custom software for security teams and researchers." />
+  <meta name="description" content="THQ Cyber Division provides professional Cyber Threat Intelligence, incident response advisory, secure VPS rentals and bespoke custom software for security teams an[...]
   <meta name="keywords" content="cyber threat intelligence, threat feeds, malware analysis, incident response, VPS rentals, virtual private server, custom software, secure infrastructure" />
 
   <!-- Open Graph -->
@@ -251,7 +251,7 @@
     <section class="panel intro reveal">
       <div class="left">
         <h2>Focused Cyber Threat Intelligence, Secure Infrastructure & Custom Software</h2>
-        <p>We deliver high-quality, actionable cyber threat intelligence and secure Virtual Private Server (VPS) rentals designed for researchers and security teams. We also build custom software and tooling tailored to your operational and research needs — from secure data pipelines to analyst dashboards and automation playbooks.</p>
+        <p>We deliver high-quality, actionable cyber threat intelligence and secure Virtual Private Server (VPS) rentals designed for researchers and security teams. We also build custom software and [...]
       </div>
       <div class="right" style="display:flex;flex-direction:column;gap:10px;align-items:flex-end;">
         <span class="badge">Professional / Confidential</span>
@@ -346,7 +346,7 @@
         <article class="card reveal" aria-labelledby="cs-title">
           <div class="icon" aria-hidden="true">SW</div>
           <h3 id="cs-title">Custom Software & Tooling</h3>
-          <p>Design and build bespoke software that complements CTI and operational workflows — analyst dashboards, automated enrichment pipelines, data ingestion connectors and automation playbooks.</p>
+          <p>Design and build bespoke software that complements CTI and operational workflows — analyst dashboards, automated enrichment pipelines, data ingestion connectors and automation playbooks[...]
           <ul>
             <li>Secure-by-design development lifecycle</li>
             <li>Integration with existing SIEM/SOAR & feeds</li>
@@ -355,6 +355,25 @@
           <div class="meta">
             <span style="margin-right:10px;color:var(--muted)">Scoping & prototypes available</span>
             <a class="btn" href="mailto:thqcs@protonmail.com?subject=Custom Software Inquiry">Request Proposal</a>
+          </div>
+        </article>
+
+        <!-- Backup & Disaster Recovery Solutions (NEW) -->
+        <article class="card reveal" aria-labelledby="bdr-title">
+          <div class="icon" aria-hidden="true">BDR</div>
+          <h3 id="bdr-title">Backup & Disaster Recovery Solutions</h3>
+          <p>Robust backup and disaster recovery planning and execution designed to minimize downtime and data loss. We implement encrypted, tested backups and operational runbooks tailored to your infrastructure.</p>
+          <ul>
+            <li>Automated, encrypted backups (on-site & off-site)</li>
+            <li>RTO/RPO planning and custom recovery SLAs</li>
+            <li>Replication, snapshotting and hybrid-cloud recovery</li>
+            <li>Disaster recovery runbooks, tabletop exercises & testing</li>
+            <li>Compliance-aligned retention policies and audits</li>
+            <li>Emergency restore support and post-recovery hardening</li>
+          </ul>
+          <div class="meta">
+            <span class="badge" style="background:#effaf6;color:#0b8a5f">From €29/mo</span>
+            <a class="btn" href="mailto:thqcs@protonmail.com?subject=Backup%20and%20Disaster%20Recovery%20Inquiry">Get Coverage</a>
           </div>
         </article>
 
