--- a/services.html
+++ b/services.html
@@ -48,6 +48,10 @@
 
   <link rel="manifest" href="https://thqcyberdivision.github.io/manifest.json">
   <meta name="theme-color" content="#007bff">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://thqcyberdivision.github.io/favicon_16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="https://thqcyberdivision.github.io/favicon_32x32.png">
+	<link rel="icon" type="image/png" sizes="96x96" href="https://thqcyberdivision.github.io/favicon_96x96.png">
+	<link rel="icon" type="image/png" sizes="192x192" href="https://thqcyberdivision.github.io/favicon_192x192.png">
   <link rel="stylesheet" href="https://cdn.snipcart.com/themes/v3.3.0/default/snipcart.css" />
 
   <!-- Analytics (kept as original) -->
